Added more visuals

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Rocket Patrol </title>
+  <link rel="preload" as="font" href="assets/upheavtt.ttf" type="font/ttf" />
   <link rel="stylesheet" href="/styles/main.css">
-  <style>
-    body{
-      background-color: beige;
-    }
-  </style>
 </head>
 <body>
   <script src="./lib/phaser.js"></script>
@@ -19,5 +15,8 @@
   <script src="./src/scenes/Menu.js"></script>
   <script src="./src/scenes/Play.js"></script>
   <script src="./src/main.js"></script>
+  
+  <div id="phaser-canvas"></div>
+  <p> Made by: Michael Remorin </p>
 </body>
 </html>
