--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Rocket Patrol </title>
-  <!-- <link rel="preload" as="font" href="assets/upheavtt.ttf" type="font/ttf" /> -->
+  <link rel="preload" as="font" href="assets/upheavtt.ttf" type="font/ttf" />
   <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
