--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Rocket Patrol </title>
-  <link rel="preload" as="font" href="/assets/upheavtt.ttf" type="font/ttf" />
+  <!-- <link rel="preload" as="font" href="/assets/upheavtt.ttf" type="font/ttf" /> -->
   <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -16,7 +16,8 @@
   <script src="./src/scenes/Play.js"></script>
   <script src="./src/main.js"></script>
 
-  <div id="phaser-canvas"></div>
   <p> Made by: Michael Remorin </p>
+  <div id="phaser-canvas"></div>
+  
 </body>
 </html>
