--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Rocket Patrol </title>
   <!-- <link rel="preload" as="font" href="/assets/upheavtt.ttf" type="font/ttf" /> -->
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
   <script src="./lib/phaser.js"></script>
